infra/k8s/web/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: mario-web
spec:
  type: ClusterIP
  selector: { app: mario-web }
  ports:
    - port: 80
      targetPort: 80
