infra/k8s/web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: mario-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts: [mario.local]
      secretName: mario-tls
  rules:
    - host: mario.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port: { number: 80 }
